syntax = "proto3";

package baseserver.api.v1;

option go_package = "server/base-server/api/v1;v1";

import "validate/validate.proto";

service FtpProxyService {
  rpc CreateOrUpdateFtpAccount (CreateOrUpdateFtpAccountRequest) returns (CreateOrUpdateFtpAccountReply);
  rpc CreateVirtualFolder (CreateVirtualFolderRequest) returns (CreateVirtualFolderReply);
  rpc DeleteVirtualFolder (DeleteVirtualFolderRequest) returns (DeleteVirtualFolderReply);
}

message CreateOrUpdateFtpAccountRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string homeS3Bucket = 4;
  string homeS3Object = 5;
}

message CreateOrUpdateFtpAccountReply {
}

message CreateVirtualFolderRequest {
  string name = 1;
  string username = 2;
  string virtualPath =3;
  string s3Bucket = 4;
  string s3Object = 5;
}

message CreateVirtualFolderReply {

}

message DeleteVirtualFolderRequest {
  string name = 1;
  string username = 2;
}

message DeleteVirtualFolderReply {

}